--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Backend microservice for AdWords demographic simulator",
   "main": "dist/server.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
@@ -15,13 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
+    "helmet": "^7.1.0",
+    "typescript": "^5.8.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.22",
+    "@types/node": "^20.17.50"
+    },
+  "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.17.50",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
@@ -29,8 +33,7 @@
     "nodemon": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
