--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "adwords",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "baml-generate": "baml-cli generate",
     "dev": "vite",
@@ -15,30 +18,30 @@
   "description": "",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.19",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vite-plugin-node-polyfills": "^0.23.0",
-    "vitest": "^3.1.4"
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "vitest": "^0.34.3"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
     "@boundaryml/baml": "^0.88.0",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash": "^4.14.197",
     "@types/react-router-dom": "^5.3.3",
-    "dotenv": "^16.5.0",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "vite-plugin-node-polyfills": "^0.15.0",
+    "autoprefixer": "^10.4.14",
+    "vite": "^4.4.5",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
-    "recharts": "^2.15.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "recharts": "^2.7.2",
+    "typescript": "^5.8.3"
   }
 }
