--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-backend": "cd backend && npm run build",
     "build-frontend": "cd frontend && npm run build",
     "build": "npm run build-backend && npm run build-frontend",
-    "start": "node server.js",
+    "start": "cd backend && npm start",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
