--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,17 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.22",
+    "@types/node": "^20.17.50",
+    "@types/pg": "^8.15.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "helmet": "^7.1.0",
-    "typescript": "^5.8.3",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.22",
-    "@types/node": "^20.17.50"
-    },
+    "pg": "^8.16.3",
+    "typescript": "^5.8.3"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
