--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "helmet": "^7.1.0",
+    "json5": "^2.2.3",
     "pg": "^8.16.3",
     "typescript": "^5.8.3"
   },
